// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makeColors should support dark mode 1`] = `
Object {
  "action": Object {
    "active": Object {
      "alt": "rgb(255, 189, 56)",
      "base": "rgb(255, 217, 140)",
      "readable": "rgb(0, 0, 0)",
    },
    "base": Object {
      "alt": "rgb(255, 189, 56)",
      "base": "rgb(255, 170, 0)",
      "readable": "rgb(0, 0, 0)",
    },
    "hover": Object {
      "alt": "rgb(255, 170, 0)",
      "base": "rgb(255, 189, 56)",
      "readable": "rgb(0, 0, 0)",
    },
    "inactive": Object {
      "alt": "rgb(165, 140, 89)",
      "base": "rgb(191, 149, 64)",
      "readable": "rgb(0, 0, 0)",
    },
  },
  "bgInverse": Object {
    "active": Object {
      "alt": "rgb(255, 255, 255)",
      "base": "rgb(255, 255, 255)",
      "readable": "rgb(0, 0, 0)",
    },
    "base": Object {
      "alt": "rgb(255, 255, 255)",
      "base": "rgb(255, 255, 255)",
      "readable": "rgb(0, 0, 0)",
    },
    "hover": Object {
      "alt": "rgb(255, 255, 255)",
      "base": "rgb(255, 255, 255)",
      "readable": "rgb(0, 0, 0)",
    },
    "inactive": Object {
      "alt": "rgb(165, 165, 165)",
      "base": "rgb(191, 191, 191)",
      "readable": "rgb(0, 0, 0)",
    },
  },
  "bgPrimary": Object {
    "active": Object {
      "alt": "rgb(51, 51, 51)",
      "base": "rgb(26, 26, 26)",
      "readable": "rgb(255, 255, 255)",
    },
    "base": Object {
      "alt": "rgb(51, 51, 51)",
      "base": "rgb(0, 0, 0)",
      "readable": "rgb(255, 255, 255)",
    },
    "hover": Object {
      "alt": "rgb(51, 51, 51)",
      "base": "rgb(13, 13, 13)",
      "readable": "rgb(255, 255, 255)",
    },
    "inactive": Object {
      "alt": "rgb(89, 89, 89)",
      "base": "rgb(64, 64, 64)",
      "readable": "rgb(255, 255, 255)",
    },
  },
  "bgSecondary": Object {
    "active": Object {
      "alt": "rgb(51, 51, 51)",
      "base": "rgb(38, 38, 38)",
      "readable": "rgb(255, 255, 255)",
    },
    "base": Object {
      "alt": "rgb(26, 26, 26)",
      "base": "rgb(13, 13, 13)",
      "readable": "rgb(255, 255, 255)",
    },
    "hover": Object {
      "alt": "rgb(38, 38, 38)",
      "base": "rgb(26, 26, 26)",
      "readable": "rgb(255, 255, 255)",
    },
    "inactive": Object {
      "alt": "rgb(93, 93, 93)",
      "base": "rgb(70, 70, 70)",
      "readable": "rgb(255, 255, 255)",
    },
  },
  "danger": Object {
    "active": Object {
      "alt": "rgb(229, 104, 116)",
      "base": "rgb(242, 181, 187)",
      "readable": "rgb(0, 0, 0)",
    },
    "base": Object {
      "alt": "rgb(229, 104, 116)",
      "base": "rgb(220, 53, 69)",
      "readable": "rgb(255, 255, 255)",
    },
    "hover": Object {
      "alt": "rgb(220, 53, 69)",
      "base": "rgb(229, 104, 116)",
      "readable": "rgb(0, 0, 0)",
    },
    "inactive": Object {
      "alt": "rgb(155, 105, 110)",
      "base": "rgb(174, 90, 98)",
      "readable": "rgb(255, 255, 255)",
    },
  },
  "dark": Object {
    "active": Object {
      "alt": "rgb(38, 38, 38)",
      "base": "rgb(51, 51, 51)",
      "readable": "rgb(255, 255, 255)",
    },
    "base": Object {
      "alt": "rgb(51, 51, 51)",
      "base": "rgb(26, 26, 26)",
      "readable": "rgb(255, 255, 255)",
    },
    "hover": Object {
      "alt": "rgb(51, 51, 51)",
      "base": "rgb(38, 38, 38)",
      "readable": "rgb(255, 255, 255)",
    },
    "inactive": Object {
      "alt": "rgb(97, 97, 97)",
      "base": "rgb(76, 76, 76)",
      "readable": "rgb(255, 255, 255)",
    },
  },
  "info": Object {
    "active": Object {
      "alt": "rgb(28, 198, 225)",
      "base": "rgb(87, 214, 234)",
      "readable": "rgb(0, 0, 0)",
    },
    "base": Object {
      "alt": "rgb(28, 198, 225)",
      "base": "rgb(23, 162, 184)",
      "readable": "rgb(255, 255, 255)",
    },
    "hover": Object {
      "alt": "rgb(23, 162, 184)",
      "base": "rgb(28, 198, 225)",
      "readable": "rgb(0, 0, 0)",
    },
    "inactive": Object {
      "alt": "rgb(96, 138, 144)",
      "base": "rgb(75, 145, 156)",
      "readable": "rgb(255, 255, 255)",
    },
  },
  "light": Object {
    "active": Object {
      "alt": "rgb(232, 232, 232)",
      "base": "rgb(224, 224, 224)",
      "readable": "rgb(0, 0, 0)",
    },
    "base": Object {
      "alt": "rgb(224, 224, 224)",
      "base": "rgb(240, 240, 240)",
      "readable": "rgb(0, 0, 0)",
    },
    "hover": Object {
      "alt": "rgb(224, 224, 224)",
      "base": "rgb(232, 232, 232)",
      "readable": "rgb(0, 0, 0)",
    },
    "inactive": Object {
      "alt": "rgb(161, 161, 161)",
      "base": "rgb(183, 183, 183)",
      "readable": "rgb(0, 0, 0)",
    },
  },
  "neutral": Object {
    "active": Object {
      "alt": "rgb(155, 155, 155)",
      "base": "rgb(197, 197, 197)",
      "readable": "rgb(0, 0, 0)",
    },
    "base": Object {
      "alt": "rgb(155, 155, 155)",
      "base": "rgb(127, 127, 127)",
      "readable": "rgb(255, 255, 255)",
    },
    "hover": Object {
      "alt": "rgb(127, 127, 127)",
      "base": "rgb(155, 155, 155)",
      "readable": "rgb(0, 0, 0)",
    },
    "inactive": Object {
      "alt": "rgb(127, 127, 127)",
      "base": "rgb(127, 127, 127)",
      "readable": "rgb(255, 255, 255)",
    },
  },
  "primary": Object {
    "active": Object {
      "alt": "rgb(255, 189, 56)",
      "base": "rgb(255, 217, 140)",
      "readable": "rgb(0, 0, 0)",
    },
    "base": Object {
      "alt": "rgb(255, 189, 56)",
      "base": "rgb(255, 170, 0)",
      "readable": "rgb(0, 0, 0)",
    },
    "hover": Object {
      "alt": "rgb(255, 170, 0)",
      "base": "rgb(255, 189, 56)",
      "readable": "rgb(0, 0, 0)",
    },
    "inactive": Object {
      "alt": "rgb(165, 140, 89)",
      "base": "rgb(191, 149, 64)",
      "readable": "rgb(0, 0, 0)",
    },
  },
  "prominent": Object {
    "active": Object {
      "alt": "rgb(255, 189, 56)",
      "base": "rgb(255, 217, 140)",
      "readable": "rgb(0, 0, 0)",
    },
    "base": Object {
      "alt": "rgb(255, 189, 56)",
      "base": "rgb(255, 170, 0)",
      "readable": "rgb(0, 0, 0)",
    },
    "hover": Object {
      "alt": "rgb(255, 170, 0)",
      "base": "rgb(255, 189, 56)",
      "readable": "rgb(0, 0, 0)",
    },
    "inactive": Object {
      "alt": "rgb(165, 140, 89)",
      "base": "rgb(191, 149, 64)",
      "readable": "rgb(0, 0, 0)",
    },
  },
  "secondary": Object {
    "active": Object {
      "alt": "rgb(88, 181, 255)",
      "base": "rgb(181, 222, 255)",
      "readable": "rgb(0, 0, 0)",
    },
    "base": Object {
      "alt": "rgb(88, 181, 255)",
      "base": "rgb(26, 153, 255)",
      "readable": "rgb(255, 255, 255)",
    },
    "hover": Object {
      "alt": "rgb(26, 153, 255)",
      "base": "rgb(88, 181, 255)",
      "readable": "rgb(0, 0, 0)",
    },
    "inactive": Object {
      "alt": "rgb(97, 135, 165)",
      "base": "rgb(77, 140, 191)",
      "readable": "rgb(255, 255, 255)",
    },
  },
  "selected": Object {
    "active": Object {
      "alt": "rgb(255, 189, 56)",
      "base": "rgb(255, 217, 140)",
      "readable": "rgb(0, 0, 0)",
    },
    "base": Object {
      "alt": "rgb(255, 189, 56)",
      "base": "rgb(255, 170, 0)",
      "readable": "rgb(0, 0, 0)",
    },
    "hover": Object {
      "alt": "rgb(255, 170, 0)",
      "base": "rgb(255, 189, 56)",
      "readable": "rgb(0, 0, 0)",
    },
    "inactive": Object {
      "alt": "rgb(165, 140, 89)",
      "base": "rgb(191, 149, 64)",
      "readable": "rgb(0, 0, 0)",
    },
  },
  "success": Object {
    "active": Object {
      "alt": "rgb(49, 204, 84)",
      "base": "rgb(102, 218, 129)",
      "readable": "rgb(0, 0, 0)",
    },
    "base": Object {
      "alt": "rgb(49, 204, 84)",
      "base": "rgb(40, 167, 69)",
      "readable": "rgb(255, 255, 255)",
    },
    "hover": Object {
      "alt": "rgb(40, 167, 69)",
      "base": "rgb(49, 204, 84)",
      "readable": "rgb(0, 0, 0)",
    },
    "inactive": Object {
      "alt": "rgb(101, 139, 110)",
      "base": "rgb(84, 147, 98)",
      "readable": "rgb(255, 255, 255)",
    },
  },
  "tertiary": Object {
    "active": Object {
      "alt": "rgb(0, 187, 187)",
      "base": "rgb(0, 237, 237)",
      "readable": "rgb(0, 0, 0)",
    },
    "base": Object {
      "alt": "rgb(0, 187, 187)",
      "base": "rgb(0, 153, 153)",
      "readable": "rgb(255, 255, 255)",
    },
    "hover": Object {
      "alt": "rgb(0, 153, 153)",
      "base": "rgb(0, 187, 187)",
      "readable": "rgb(0, 0, 0)",
    },
    "inactive": Object {
      "alt": "rgb(89, 135, 135)",
      "base": "rgb(64, 140, 140)",
      "readable": "rgb(255, 255, 255)",
    },
  },
  "warning": Object {
    "active": Object {
      "alt": "rgb(255, 207, 65)",
      "base": "rgb(255, 229, 151)",
      "readable": "rgb(0, 0, 0)",
    },
    "base": Object {
      "alt": "rgb(255, 207, 65)",
      "base": "rgb(255, 193, 7)",
      "readable": "rgb(0, 0, 0)",
    },
    "hover": Object {
      "alt": "rgb(255, 193, 7)",
      "base": "rgb(255, 207, 65)",
      "readable": "rgb(0, 0, 0)",
    },
    "inactive": Object {
      "alt": "rgb(165, 147, 91)",
      "base": "rgb(191, 160, 67)",
      "readable": "rgb(0, 0, 0)",
    },
  },
}
`;

exports[`makeColors should support light mode 1`] = `
Object {
  "action": Object {
    "active": Object {
      "alt": "rgb(204, 136, 0)",
      "base": "rgb(135, 90, 0)",
      "readable": "rgb(255, 255, 255)",
    },
    "base": Object {
      "alt": "rgb(204, 136, 0)",
      "base": "rgb(255, 170, 0)",
      "readable": "rgb(0, 0, 0)",
    },
    "hover": Object {
      "alt": "rgb(255, 170, 0)",
      "base": "rgb(204, 136, 0)",
      "readable": "rgb(0, 0, 0)",
    },
    "inactive": Object {
      "alt": "rgb(165, 140, 89)",
      "base": "rgb(191, 149, 64)",
      "readable": "rgb(0, 0, 0)",
    },
  },
  "bgInverse": Object {
    "active": Object {
      "alt": "rgb(0, 0, 0)",
      "base": "rgb(0, 0, 0)",
      "readable": "rgb(255, 255, 255)",
    },
    "base": Object {
      "alt": "rgb(0, 0, 0)",
      "base": "rgb(0, 0, 0)",
      "readable": "rgb(255, 255, 255)",
    },
    "hover": Object {
      "alt": "rgb(0, 0, 0)",
      "base": "rgb(0, 0, 0)",
      "readable": "rgb(255, 255, 255)",
    },
    "inactive": Object {
      "alt": "rgb(89, 89, 89)",
      "base": "rgb(64, 64, 64)",
      "readable": "rgb(255, 255, 255)",
    },
  },
  "bgPrimary": Object {
    "active": Object {
      "alt": "rgb(224, 224, 224)",
      "base": "rgb(240, 240, 240)",
      "readable": "rgb(0, 0, 0)",
    },
    "base": Object {
      "alt": "rgb(224, 224, 224)",
      "base": "rgb(255, 255, 255)",
      "readable": "rgb(0, 0, 0)",
    },
    "hover": Object {
      "alt": "rgb(224, 224, 224)",
      "base": "rgb(247, 247, 247)",
      "readable": "rgb(0, 0, 0)",
    },
    "inactive": Object {
      "alt": "rgb(165, 165, 165)",
      "base": "rgb(191, 191, 191)",
      "readable": "rgb(0, 0, 0)",
    },
  },
  "bgSecondary": Object {
    "active": Object {
      "alt": "rgb(224, 224, 224)",
      "base": "rgb(232, 232, 232)",
      "readable": "rgb(0, 0, 0)",
    },
    "base": Object {
      "alt": "rgb(240, 240, 240)",
      "base": "rgb(247, 247, 247)",
      "readable": "rgb(0, 0, 0)",
    },
    "hover": Object {
      "alt": "rgb(232, 232, 232)",
      "base": "rgb(240, 240, 240)",
      "readable": "rgb(0, 0, 0)",
    },
    "inactive": Object {
      "alt": "rgb(163, 163, 163)",
      "base": "rgb(187, 187, 187)",
      "readable": "rgb(0, 0, 0)",
    },
  },
  "danger": Object {
    "active": Object {
      "alt": "rgb(186, 32, 47)",
      "base": "rgb(123, 21, 31)",
      "readable": "rgb(255, 255, 255)",
    },
    "base": Object {
      "alt": "rgb(186, 32, 47)",
      "base": "rgb(220, 53, 69)",
      "readable": "rgb(255, 255, 255)",
    },
    "hover": Object {
      "alt": "rgb(220, 53, 69)",
      "base": "rgb(186, 32, 47)",
      "readable": "rgb(255, 255, 255)",
    },
    "inactive": Object {
      "alt": "rgb(155, 105, 110)",
      "base": "rgb(174, 90, 98)",
      "readable": "rgb(255, 255, 255)",
    },
  },
  "dark": Object {
    "active": Object {
      "alt": "rgb(38, 38, 38)",
      "base": "rgb(51, 51, 51)",
      "readable": "rgb(255, 255, 255)",
    },
    "base": Object {
      "alt": "rgb(51, 51, 51)",
      "base": "rgb(26, 26, 26)",
      "readable": "rgb(255, 255, 255)",
    },
    "hover": Object {
      "alt": "rgb(51, 51, 51)",
      "base": "rgb(38, 38, 38)",
      "readable": "rgb(255, 255, 255)",
    },
    "inactive": Object {
      "alt": "rgb(97, 97, 97)",
      "base": "rgb(76, 76, 76)",
      "readable": "rgb(255, 255, 255)",
    },
  },
  "info": Object {
    "active": Object {
      "alt": "rgb(18, 130, 147)",
      "base": "rgb(12, 86, 98)",
      "readable": "rgb(255, 255, 255)",
    },
    "base": Object {
      "alt": "rgb(18, 130, 147)",
      "base": "rgb(23, 162, 184)",
      "readable": "rgb(255, 255, 255)",
    },
    "hover": Object {
      "alt": "rgb(23, 162, 184)",
      "base": "rgb(18, 130, 147)",
      "readable": "rgb(255, 255, 255)",
    },
    "inactive": Object {
      "alt": "rgb(96, 138, 144)",
      "base": "rgb(75, 145, 156)",
      "readable": "rgb(255, 255, 255)",
    },
  },
  "light": Object {
    "active": Object {
      "alt": "rgb(232, 232, 232)",
      "base": "rgb(224, 224, 224)",
      "readable": "rgb(0, 0, 0)",
    },
    "base": Object {
      "alt": "rgb(224, 224, 224)",
      "base": "rgb(240, 240, 240)",
      "readable": "rgb(0, 0, 0)",
    },
    "hover": Object {
      "alt": "rgb(224, 224, 224)",
      "base": "rgb(232, 232, 232)",
      "readable": "rgb(0, 0, 0)",
    },
    "inactive": Object {
      "alt": "rgb(161, 161, 161)",
      "base": "rgb(183, 183, 183)",
      "readable": "rgb(0, 0, 0)",
    },
  },
  "neutral": Object {
    "active": Object {
      "alt": "rgb(102, 102, 102)",
      "base": "rgb(67, 67, 67)",
      "readable": "rgb(255, 255, 255)",
    },
    "base": Object {
      "alt": "rgb(102, 102, 102)",
      "base": "rgb(127, 127, 127)",
      "readable": "rgb(255, 255, 255)",
    },
    "hover": Object {
      "alt": "rgb(127, 127, 127)",
      "base": "rgb(102, 102, 102)",
      "readable": "rgb(255, 255, 255)",
    },
    "inactive": Object {
      "alt": "rgb(127, 127, 127)",
      "base": "rgb(127, 127, 127)",
      "readable": "rgb(255, 255, 255)",
    },
  },
  "primary": Object {
    "active": Object {
      "alt": "rgb(204, 136, 0)",
      "base": "rgb(135, 90, 0)",
      "readable": "rgb(255, 255, 255)",
    },
    "base": Object {
      "alt": "rgb(204, 136, 0)",
      "base": "rgb(255, 170, 0)",
      "readable": "rgb(0, 0, 0)",
    },
    "hover": Object {
      "alt": "rgb(255, 170, 0)",
      "base": "rgb(204, 136, 0)",
      "readable": "rgb(0, 0, 0)",
    },
    "inactive": Object {
      "alt": "rgb(165, 140, 89)",
      "base": "rgb(191, 149, 64)",
      "readable": "rgb(0, 0, 0)",
    },
  },
  "prominent": Object {
    "active": Object {
      "alt": "rgb(204, 136, 0)",
      "base": "rgb(135, 90, 0)",
      "readable": "rgb(255, 255, 255)",
    },
    "base": Object {
      "alt": "rgb(204, 136, 0)",
      "base": "rgb(255, 170, 0)",
      "readable": "rgb(0, 0, 0)",
    },
    "hover": Object {
      "alt": "rgb(255, 170, 0)",
      "base": "rgb(204, 136, 0)",
      "readable": "rgb(0, 0, 0)",
    },
    "inactive": Object {
      "alt": "rgb(165, 140, 89)",
      "base": "rgb(191, 149, 64)",
      "readable": "rgb(0, 0, 0)",
    },
  },
  "secondary": Object {
    "active": Object {
      "alt": "rgb(0, 125, 225)",
      "base": "rgb(0, 83, 149)",
      "readable": "rgb(255, 255, 255)",
    },
    "base": Object {
      "alt": "rgb(0, 125, 225)",
      "base": "rgb(26, 153, 255)",
      "readable": "rgb(255, 255, 255)",
    },
    "hover": Object {
      "alt": "rgb(26, 153, 255)",
      "base": "rgb(0, 125, 225)",
      "readable": "rgb(255, 255, 255)",
    },
    "inactive": Object {
      "alt": "rgb(97, 135, 165)",
      "base": "rgb(77, 140, 191)",
      "readable": "rgb(255, 255, 255)",
    },
  },
  "selected": Object {
    "active": Object {
      "alt": "rgb(204, 136, 0)",
      "base": "rgb(135, 90, 0)",
      "readable": "rgb(255, 255, 255)",
    },
    "base": Object {
      "alt": "rgb(204, 136, 0)",
      "base": "rgb(255, 170, 0)",
      "readable": "rgb(0, 0, 0)",
    },
    "hover": Object {
      "alt": "rgb(255, 170, 0)",
      "base": "rgb(204, 136, 0)",
      "readable": "rgb(0, 0, 0)",
    },
    "inactive": Object {
      "alt": "rgb(165, 140, 89)",
      "base": "rgb(191, 149, 64)",
      "readable": "rgb(0, 0, 0)",
    },
  },
  "success": Object {
    "active": Object {
      "alt": "rgb(32, 134, 55)",
      "base": "rgb(21, 89, 37)",
      "readable": "rgb(255, 255, 255)",
    },
    "base": Object {
      "alt": "rgb(32, 134, 55)",
      "base": "rgb(40, 167, 69)",
      "readable": "rgb(255, 255, 255)",
    },
    "hover": Object {
      "alt": "rgb(40, 167, 69)",
      "base": "rgb(32, 134, 55)",
      "readable": "rgb(255, 255, 255)",
    },
    "inactive": Object {
      "alt": "rgb(101, 139, 110)",
      "base": "rgb(84, 147, 98)",
      "readable": "rgb(255, 255, 255)",
    },
  },
  "tertiary": Object {
    "active": Object {
      "alt": "rgb(0, 122, 122)",
      "base": "rgb(0, 81, 81)",
      "readable": "rgb(255, 255, 255)",
    },
    "base": Object {
      "alt": "rgb(0, 122, 122)",
      "base": "rgb(0, 153, 153)",
      "readable": "rgb(255, 255, 255)",
    },
    "hover": Object {
      "alt": "rgb(0, 153, 153)",
      "base": "rgb(0, 122, 122)",
      "readable": "rgb(255, 255, 255)",
    },
    "inactive": Object {
      "alt": "rgb(89, 135, 135)",
      "base": "rgb(64, 140, 140)",
      "readable": "rgb(255, 255, 255)",
    },
  },
  "warning": Object {
    "active": Object {
      "alt": "rgb(210, 157, 0)",
      "base": "rgb(139, 104, 0)",
      "readable": "rgb(255, 255, 255)",
    },
    "base": Object {
      "alt": "rgb(210, 157, 0)",
      "base": "rgb(255, 193, 7)",
      "readable": "rgb(0, 0, 0)",
    },
    "hover": Object {
      "alt": "rgb(255, 193, 7)",
      "base": "rgb(210, 157, 0)",
      "readable": "rgb(0, 0, 0)",
    },
    "inactive": Object {
      "alt": "rgb(165, 147, 91)",
      "base": "rgb(191, 160, 67)",
      "readable": "rgb(0, 0, 0)",
    },
  },
}
`;
